--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .head-container {
@@ -15,20 +17,24 @@
 .head-icon {
     width: 100px;
     height: 100px;
-    background-color: blue;
     position: relative;
     transition-duration: 1s;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .skill-icon {
     position: absolute;
-    background-color: red;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     transition-duration: 1s;
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     opacity: 0;
     z-index: -1;
 }
@@ -47,4 +53,15 @@
     border-radius: 8px;
     opacity: 0;
     transition-duration: 1s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill-card-img {
+    width: 70%;
+    height: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
