--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,3 +1,7 @@
+:root {
+    --card-radius: 8px;
+}
+
 .skills-page-container {
     display: flex;
     flex-direction: column;
@@ -48,20 +52,58 @@
 }
 
 .skill-card {
-    border: 1px solid black;
     min-height: 150px;
-    border-radius: 8px;
     opacity: 0;
-    transition-duration: 1s;
+    transition: opacity 1s;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: transparent;
+    perspective: 1000px;
+}
+
+.skill-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    border-radius: var(--card-radius);
+    border: 1px solid black;
+}
+
+.skill-card:hover .skill-card-inner {
+    transform: rotateY(180deg);
 }
 
 .skill-card-img {
-    width: 70%;
-    height: 70%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
+    width: 60%;
+    height: 60%;
+}
+
+.skill-card-front, .skill-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.skill-card-front {
+    background-color: #bbb;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: var(--card-radius);
+}
+
+.skill-card-back {
+    background-color: dodgerblue;
+    transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: var(--card-radius);
 }
