--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,16 @@ body {
     overflow-x: hidden;
 }
 
+a {
+    cursor: pointer;
+}
+
 h4 {
     font-size: 1.6rem;
+}
+
+.btn {
+    cursor: pointer;
 }
 
 .btn:focus {
