--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,14 +1,19 @@
+:root {
+    --lighter-accent-color: #ad2d1f;
+}
+
 header {
     width: 100%;
     height: var(--header-height);
     display: flex;
     justify-content: center;
+    background-color: var(--primary-color);
 }
 
 nav {
     position: relative;
     margin: 6px 0;
-    background-color: red;
+    background-color: var(--primary-color);
 }
 
 nav a {
@@ -21,13 +26,12 @@ nav a {
     position: relative;
     z-index: 2;
     transition-duration: 0.6s;
-    color: #fff;
+    color: var(--background-color);
 }
 
 .selector {
     height: 100%;
     width: 70px;
-    background-color: yellow;
     display: inline-block;
     position: absolute;
     left: 0;
@@ -37,9 +41,9 @@ nav a {
     border-radius: 50px;
     transition-duration:0.6s;
     transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    background: #05abe0;
-    background: -moz-linear-gradient(45deg, #05abe0 0%, #8200f4 100%);
-    background: -webkit-linear-gradient(45deg, #05abe0 0%,#8200f4 100%);
-    background: linear-gradient(45deg, #05abe0 0%,#8200f4 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#05abe0', endColorstr='#8200f4',GradientType=1 );
+    background: var(--accent-color);
+    background: -moz-linear-gradient(45deg, var(--lighter-accent-color) 0%, var(--accent-color) 100%);
+    background: -webkit-linear-gradient(45deg, var(--lighter-accent-color) 0%,var(--accent-color) 100%);
+    background: linear-gradient(45deg, var(--lighter-accent-color) 0%,var(--accent-color) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=var(--lighter-accent-color), endColorstr=var(--accent-color),GradientType=1 );
 }
