--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,3 +1,7 @@
+:root {
+    --project-border-radius: 8px;
+}
+
 .projects-container {
     min-height: 270px;
     display: grid;
@@ -8,13 +12,16 @@
 }
 
 .project {
-    background-color: red;
+    background-color: var(--primary-color);
     min-height: 270px;
+    color: var(--background-color);
+    border-radius: var(--project-border-radius);
 }
 
 .project .img-container {
     height: 55%;
-    background-color: blue;
+    background-color: #333;
+    border-radius: var(--project-border-radius) var(--project-border-radius) 0 0;
 }
 
 .project .info-container {
@@ -34,7 +41,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 40%;
+    height: 45%;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -43,5 +50,13 @@
 
 .projects-container .buttons-container .btn {
     min-width: 100px;
-    padding: 4px 0;
+    padding: 8px 0;
+    background-color: var(--accent-color);
+    color: var(--background-color);
+    border: none;
+    border-radius: 6px;
+}
+
+.projects-container .buttons-container .btn:active {
+    transform: scale(0.98);
 }
