--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@
     --footer-height: 100px;
     --circle-size: 200px;
     --header-height: 50px;
+
+    --primary-color: #35495e;
+    --secondary-color: #41b883;
+    --background-color: #f5f5f5;
+    --accent-color: #e74c3c;
+    --text-color: #333333;
 }
 
 * {
@@ -39,11 +45,11 @@ h4 {
 
 main {
     min-height: calc(100vh - var(--footer-height) - var(--header-height));
-    background-color: cyan;
+    background-color: var(--background-color);
     padding: 50px;
 }
 
 footer {
     height: var(--footer-height);
-    background-color: orange;
+    background-color: var(--primary-color);
 }
